--- a/kustomize/overlays/dev/grafana.yml
+++ b/kustomize/overlays/dev/grafana.yml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana
-  namespace: four-keys
+  namespace: fourkeys
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 3000
     targetPort: 3000
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: grafana
-  namespace: four-keys
+  namespace: fourkeys
 spec:
   replicas: 1
   selector:
