--- a/kustomize/overlays/dev/mariadb.yml
+++ b/kustomize/overlays/dev/mariadb.yml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db
-  namespace: four-keys
+  namespace: fourkeys
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 3306
     targetPort: 3306
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: db
-  namespace: four-keys
+  namespace: fourkeys
 spec:
   replicas: 1
   selector:
@@ -53,7 +53,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: init-db-configmap
-  namespace: four-keys
+  namespace: fourkeys
 data:
   init-db.sql: |
     CREATE OR REPLACE TABLE events_raw (
