--- a/kustomize/overlays/dev/rabbit.yml
+++ b/kustomize/overlays/dev/rabbit.yml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbit
-  namespace: four-keys
+  namespace: fourkeys
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 15672
     targetPort: 15672
@@ -19,7 +19,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rabbit
-  namespace: four-keys
+  namespace: fourkeys
 spec:
   replicas: 1
   selector:
