--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Determine Docker tag
       run: |
         REF_NAME="${GITHUB_REF##*/}" # Extracts either 'main' or the tag name.
-        IMAGE_NAME="${{ vars.DOCKER_HUB_BASE_REPO }}/fourkeys/${{ matrix.dockerfile }}"
+        IMAGE_NAME="fleetingclarity/fourkeys/${{ matrix.dockerfile }}"
         if [[ "${{ github.event_name }}" == "push" && "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
           echo "DOCKER_TAGS=${IMAGE_NAME}:${REF_NAME},${IMAGE_NAME}:latest" >> $GITHUB_ENV
         else
