--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -36,12 +36,15 @@ jobs:
     - name: Determine Docker tag
       run: |
         REF_NAME="${GITHUB_REF##*/}" # Extracts either 'main' or the tag name.
-        IMAGE_NAME="fleetingclarity/fourkeys/${{ matrix.dockerfile }}"
-        if [[ "${{ github.event_name }}" == "push" && "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
+        IMAGE_BASE="fleetingclarity/fourkeys"
+        FORMATTED_DOCKERFILE="${{ matrix.dockerfile // '/'/ '-' }}" # replaces '/' with '-'
+        IMAGE_NAME="${IMAGE_BASE}-${FORMATTED_DOCKERFILE}"
+        if [[ "${{ github.event_name }}" == "push" && startsWith(github.ref, 'refs/tags/') ]]; then
           echo "DOCKER_TAGS=${IMAGE_NAME}:${REF_NAME},${IMAGE_NAME}:latest" >> $GITHUB_ENV
         else
           echo "DOCKER_TAGS=${IMAGE_NAME}:${REF_NAME}" >> $GITHUB_ENV
         fi
+
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v3
