--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -33,12 +33,15 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
+    - name: Format dockerfile path
+      run: |
+        echo "FORMATTED_DOCKER_IMAGE=${{ matrix.dockerfile }}".replace(/\//g, '-') >> $GITHUB_ENV
+
     - name: Determine Docker tag
       run: |
         REF_NAME="${GITHUB_REF##*/}" # Extracts either 'main' or the tag name.
         IMAGE_BASE="fleetingclarity/fourkeys"
-        FORMATTED_DOCKERFILE="${{ matrix.dockerfile // '/'/ '-' }}" # replaces '/' with '-'
-        IMAGE_NAME="${IMAGE_BASE}-${FORMATTED_DOCKERFILE}"
+        IMAGE_NAME="${IMAGE_BASE}-${{ env.FORMATTED_DOCKER_IMAGE }}"
         if [[ "${{ github.event_name }}" == "push" && startsWith(github.ref, 'refs/tags/') ]]; then
           echo "DOCKER_TAGS=${IMAGE_NAME}:${REF_NAME},${IMAGE_NAME}:latest" >> $GITHUB_ENV
         else
