--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -42,7 +42,7 @@ jobs:
         REF_NAME="${GITHUB_REF##*/}" # Extracts either 'main' or the tag name.
         IMAGE_BASE="fleetingclarity/fourkeys"
         IMAGE_NAME="${IMAGE_BASE}-${{ env.FORMATTED_DOCKER_IMAGE }}"
-        if [[ "${{ github.event_name }}" == "push" && startsWith(github.ref, 'refs/tags/') ]]; then
+        if [[ "${{ github.event_name }}" == "push" && ${{ startsWith(github.ref, 'refs/tags/') }} ]]; then
           echo "DOCKER_TAGS=${IMAGE_NAME}:${REF_NAME},${IMAGE_NAME}:latest" >> $GITHUB_ENV
         else
           echo "DOCKER_TAGS=${IMAGE_NAME}:${REF_NAME}" >> $GITHUB_ENV
