--- a/workers/github-parser/requirements.txt
+++ b/workers/github-parser/requirements.txt
@@ -1,5 +1,3 @@
-Flask==2.3.2
-gunicorn==20.1.0
-google-cloud-bigquery==1.23.1
-git+https://github.com/dora-team/fourkeys.git#egg=shared&subdirectory=shared
-protobuf==3.20.2
+git+https://github.com/fleetingclarity/fourkeys.git#egg=shared&subdirectory=shared
+pika==1.3.2
+mysql-connector-python==8.1.0
