--- a/workers/gitlab-parser/requirements.txt
+++ b/workers/gitlab-parser/requirements.txt
@@ -1,3 +1,3 @@
-git+https://github.com/fleetingclarity/fourkeys.git#egg=shared&subdirectory=shared
+git+https://github.com/fleetingclarity/fourkeys.git@main#egg=shared&subdirectory=shared
 pika==1.3.2
 mysql-connector-python==8.1.0
